--- a/index-pl.html
+++ b/index-pl.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="images/logo.svg" sizes="any" type="image/svg+xml">
 		<title>Oskar Bielak - Doświadczenie i Edukacja </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -21,10 +22,7 @@
 					<div id="intro">
 						<h1>Oskar Bielak<br />
 						Programista</h1>
-						<p>Lubię wyzwania. 
-						   Jest wytrwały w projektach i bardzo szybko uczę się nowych rzeczy. Każdego dnia staram się pracować nad rozwojem wszystkich języków programowania.
-						   Chce w przyszłości współpracować przy dużych projektach. 
-						   Ten strona jest skierowany do przyszłych pracodawców lub osób, które będą chciały ze mną pracować.</p> <!-- Do poprawy -->
+						<p>"Jeżeli istnieje jakiś jeden sekret sukcesu, to jest to umiejętność przyjmowania cudzego punktu widzenia i patrzenia z tej perspektywy z równą łatwością jak z własnej." - Henry Ford.</p> 
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -44,7 +42,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="index.html" class="icon brand fa-flag"><span class="label">EN</span></a></li>
-							<li><a href="tel:+48533933944" class="icon brand fa-mobile"><span class="label">Phone</span></a></li>
+							<li><a href="tel:+48533933944" class="icon brand fa-phone-alt"><span class="label">Phone</span></a></li>
 							<li><a href="mailto:oskar.bielak@mixbox.pl" class="icon brand fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://www.facebook.com/oskar.bielak.18" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/oskar_bielak" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -79,6 +77,8 @@
 									<p> - Zarządzanie projektami i wdrażanie funkcjonalności, modułów samodzielnie</p>
 									<p> - Tworzenie automatyzacji dla klientów (C#, T-SQL)</p>
 									<p> - Testowanie stworzonych dodatków, funkcji, widoków itp</p>	
+									<p> - Tworzenie instrukcji dla uzytkownika koncowego</p>
+									<p> - Prowadzenie szkoleń</p>
 									<p> - Analiza potrzeb biznesowych klienta</p>
 								</article>
 								<article>
