--- a/project-pl.html
+++ b/project-pl.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="images/logo.svg" sizes="any" type="image/svg+xml">
 		<title>Oskar Bielak - Strony internetowe i Projekty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
