--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="images/logo.svg" sizes="any" type="image/svg+xml">
 		<title>Oskar Bielak - Experience and Education </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -21,10 +22,7 @@
 					<div id="intro">
 						<h1>Oskar Bielak<br />
 						Programmer</h1>
-						<p>I really like challenges. I am persistent in the project and I learn new things very quickly. 
-							Every day I try to work on the development of all programming languages. 
-							Wants to collaborate on big projects in the future. 
-							This Website is aimed at future employers or people who will want to work with me.</p>
+						<p>"If there is any one secret of success it lies in the ability to get the other person's point of view and see things from that person's angle as well as from your own." - Henry Ford</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -78,7 +76,9 @@
 									<p> - Creating print templates (DevExpress)</p>	
 									<p> - Project management and implementation of functionalities and modules independently</p>
 									<p> - Creating automation for clients (C#)</p>
-									<p> - Testing created add-ons, features, view, etc</p>	
+									<p> - Testing created add-ons, features, view, etc</p>
+									<p> - Creating instructions for the end user</p>
+									<p> - Conducting training </p>	
 									<p> - Analysis of client's business needs</p>
 								</article>
 								<article>
