--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="index-pl.html" class="icon brand fa-flag"><span class="label">PL</span></a></li>
-							<li><a href="tel:+48533933944" class="icon brand fa-mobile"><span class="label">Phone</span></a></li>
+							<li><a href="tel:+48533933944" class="icon brand fa-phone-volume"><span class="label">PL</span></a></li>
 							<li><a href="mailto:oskar.bielak@mixbox.pl" class="icon brand fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://www.facebook.com/oskar.bielak.18" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/oskar_bielak" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
