--- a/aboutme.html
+++ b/aboutme.html
@@ -76,7 +76,7 @@
 								</header>
 								
 								<p> Programming rules: OOP, KISS, SOLID, DRY, Regular CodeReview</p>
-								<p> C# - Advanced (.NET, .NET Core, .NET Framework, WinForms, Razor, ASP.NET, Library LINQ, SOLID, Entity Framework, ADO.NET, Library ExcelDataReader, Library Interol, Library CsvHelper, Library MicrosoftDataSqlClient, DevExpress)</p>
+								<p> C# - Advanced (.NET, .NET Core, .NET Framework, WinForms, Razor, ASP.NET, Library LINQ, Entity Framework, ADO.NET, Library ExcelDataReader, Library Interol, Library CsvHelper, Library MicrosoftDataSqlClient, DevExpress)</p>
 								<p> T-SQL - Advanced (View, Reports, CRUD, ACID, Trigger, Procedure, Loop, Functions)</p>
 								<p>	GitHub - Advanced (Merge, Add branch, Solving the conflict by merge branch with master, Pull, Push, Commit)</p>
 								<p> Framework Enova - Advanced (Workflow, BI, HR and Payroll, DLL, Features, Bussness model, Importers, Triggers, Task, Workers)</p>
