--- a/aboutme-pl.html
+++ b/aboutme-pl.html
@@ -76,7 +76,7 @@
 								</header>
 								
 								<p> Programistyczne zasady, których się trzymam: OOP, KISS, SOLID, DRY, Częste CodeReview</p>
-								<p> C# - Zaawansowany (.NET, .NET Core, .NET Framework, WinForms, Razor, ASP.NET, Library LINQ, SOLID, Entity Framework, ADO.NET, Library ExcelDataReader, Library Interol, Library CsvHelper, Library MicrosoftDataSqlClient, DevExpress)</p>
+								<p> C# - Zaawansowany (.NET, .NET Core, .NET Framework, WinForms, Razor, ASP.NET, Library LINQ, Entity Framework, ADO.NET, Library ExcelDataReader, Library Interol, Library CsvHelper, Library MicrosoftDataSqlClient, DevExpress)</p>
 								<p> T-SQL - Zaawansowany (View, Reports, CRUD, ACID, Trigger, Procedure, Loop, Functions)</p>
 								<p>	GitHub - Zaawansowany (Merge, Add branch, Solving the conflict by merge branch with master, Pull, Push, Commit)</p>
 								<p> Framework Enova - Zaawansowany (Workflow, BI, HR and Payroll, DLL, Features, Bussness model, Importers, Triggers, Task, Workers)</p>
